[project]
name = "energymeter"
version = "1.3.0"
requires-python = ">= 3.3"
license = {text = "Apache License, Version 2.0"}
description = "A Python module for interfacing with several energy meters"
readme = "README.md"
keywords = ["Energy meter", "Modbus"]
authors = [
    { name = "ElaadNL", email = "developers@elaad.nl" },
    { name = "Stan Janssen", email = "stanjanssen@finetuned.nl" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "pyserial",
    "minimalmodbus~=2.0",
    "tinysbus"
]

[project.urls]
repository = "https://github.com/ElaadNL/python-energymeter.git"
